[package]
name = "kbremap"
description = "Custom keyboard layouts for windows"
version = "1.5.1"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/timokroeger/kbremap"

[dependencies]
anyhow = "1.0"
cstr = "0.2.11"
encode_unicode = "1.0"
petgraph = { version = "0.6.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
widestring = "1.0"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.15"

# Size optimized build:
# `cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target i686-pc-windows-msvc`
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
