[package]
name = "kbremap"
description = "Custom keyboard layouts for windows"
version = "2.0.1"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/timokroeger/kbremap"

[dependencies]
anyhow = "1.0"
encode_unicode = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9.7"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }
winmsg-executor = "0.3.1"

[build-dependencies]
winresource = { version = "0.1.28", default-features = false }

# Size optimized build:
# `cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-msvc`
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
